--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,21 @@
-<h1>This is a post</h1>
+<div class="container">
+    <h1>Posts Detail</h1>
+    <div class="post-detail">
+        <div class="post-head">
+            <h5>Post <%=@post.id %> <%= @post.title %> <% 'by' %> <%= @user.name %> </h5>
+            <ul>
+                <li>Comments: <%= @post.Comments_counter || 0 %> </li>
+                <li>Likes: <%= @post.Likes_counter || 0 %> </li>
+            </ul>
+        </div>
+        <div class="post-body">
+            <p><%= @post.text %></p>
+        </div>
+    </div>
+    <div class="comments">
+        <% @post.comments.order(created_at: :desc).each do |comment| %>
+            <%= render partial: "/shared/comment", locals: { comment: comment } %>
+        <% end %>
+    </div>
+</div>
+
