--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,18 @@
 
-<div class="container">
-    <h1>My Blog</h1>
-    <% @users.each do |user| %>
-        <a href="/users<%= user.id %>">
-            <%= render partial: "/shared/user", locals: { user: user } %>
-        </a>
+<section>
+  <% @users.each do |user| %>
+    <%= link_to user_path(user) do %>
+      <li class="user-container">
+        <div class="user-image">
+        	<%= image_tag user.photo, alt: "#{user.name}-avatar" %>
+        </div>
+        <div class="user-info">
+          <h3 class="username"><%= user.name %></h3>
+          <span class="post-numb">Number of posts: <%= user.posts_counter %></span>
+        </div>
+      </li>
     <% end %>
-</div>
+  <% end %>
+</section>
 
 
