--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,171 +13,73 @@
  *= require_tree .
  *= require_self
  */
-
- body {
-    font-family: Helvetica, Geneva, Arial, sans-serif;
-    font-size: small;
-    color: #000;
-    background-color: #fff;
+ section {
+    margin-top: 50px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 20px;
   }
   
-  a {
+  section a {
+    width: 80%;
+    list-style: none;
     text-decoration: none;
   }
   
-  a:visited {
-    color: inherit;
-  }
-  
-  .a:hover {
-    cursor: pointer;
-  }
-  
-  ul {
-    list-style: none;
-  }
-  
-  .container {
-    width: 70%;
-    margin: 0 auto;
-    padding: 0 20px;
+  .user-container {
+    width: 100%;
+    height: 120px;
     display: flex;
-    flex-direction: column;
+    column-gap: 60px;
   }
   
-  .user {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10px 0;
-    padding: 1em 3em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  .user-container:hover {
+    scale: 1.01;
+    transition: 0.4s;
   }
   
   .user-image {
     width: 100px;
     height: 100px;
+    margin: auto;
+  }
+  
+  .user-image img {
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    margin-right: 10px;
+    border: 2px solid #fff;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
   }
   
-  .user-detail {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  .user-info {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 10px;
+    border: 1px solid #d3d3d3;
   }
   
-  .user-name {
-    font-size: 2em;
+  .user-info:hover {
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+    transition: 0.4s;
+  }
+  
+  .username {
+    margin-left: 30px;
+    font-size: 25px;
     font-weight: bold;
-    padding: 0 5em;
+    color: black;
   }
   
-  .post-no {
-    font-size: 1em;
-    align-self: flex-end;
-  }
-  
-  .user-bio {
-    margin: 10px 0;
-    padding: 1em 3em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 1.5em;
-  }
-  
-  h5 {
-    font-size: 0.8em;
-  }
-  
-  .user-posts {
-    margin: 10px 0;
-    padding: 0.5em 2em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .post {
-    margin: 10px 0;
-    padding: 1em 3em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .post p,
-  .post-body {
-    font-size: 1.5em;
-  }
-  
-  .post ul,
-  .post-head ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 2em;
-  }
-  
-  button {
-    padding: 0.5em 1em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #000;
-    color: #fff;
-    font-size: 1em;
-    cursor: pointer;
-  }
-  
-  .post-with-comments {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0.5em 0.5em;
-    margin: 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .comments {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 0.5em 0.5em;
-    margin: 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .comment {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 2em;
-    margin: 0;
-  }
-  
-  .post-detail {
-    margin: 10px 0;
-    padding: 0.5em 2em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .post-head {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 2em;
-  }
-  
-  .post-head h5 {
-    font-size: 1.5em;
+  .post-numb {
+    color: black;
+    font-size: 15px;
+    text-align: right;
+    margin-right: 20px;
   }
