--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,5 @@
-<%= render partial: "/shared/user", locals: { user: @user } %>
-<div class="user-posts">
-<% @posts.each.with_index(1) do |post, index| %>
+<h1>Posts#index</h1>
+<p>Find me in app/views/posts/index.html.erb</p>
 
-  <div class="post-with-comments">
-  <a href="/users<%= @user.id %>/posts<%=post.id %>">
-     <%=render partial: "/shared/post", locals: { post: post, index: index } %>
-     </a>
-
-     <div class="comments">
-        <% post.five_most_recent_comments_for_post.each do |comment| %>
-          <%= render partial: "/shared/comment", locals: {comment: comment } %>
-        <% end %>
-    </div>
-  </div>
-  <% end %>
- <button class="btn btn-primary">More Posts</button>
- </div>
- </div>
+<p>All the posts of one User</p>
 
