--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,4 @@
-<div class="container">
-    <h1>User Detail</h1>
-    <%= render partial: "/shared/user", locals: { user: @user } %>
-    <div class="user-bio">
-        <h5>Bio</h5>
-        <p><%= @user.Bio %></p>
-    </div>
-    <div class="user-posts">
-        <h5>Posts</h5>
-        <% @user.last_three_posts_for_user.each.with_index(1) do |post, index| %>
-            <a href="/users<%= @user.id %>/posts<%= post.id %>">
-                <%= render partial: "/shared/post", locals: { post: post, index: index } %>
-            </a>
-        <% end %>
-        <a href="/users<%= @user.id %>/posts">
-            <button class="btn btn-primary">See all posts</button>
-        </a>
-    </div>
-</div>
+<h1>Users#show</h1>
+<p>Find me in app/views/users/show.html.erb</p>
+
+<p>Every User data and all his posts</p>
