--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,27 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
-<p>The Post and all the Comments about it</p>
-
+<h1>Here is a list of posts for a given post</h1>
+<section>
+  <div class='container-id-text-counter-show-posts'>
+    <div>
+      <h3>Post #<%=@post.id%> by <%=@post.author.name%></h3>
+    </div>
+    <div>
+      <span class='number-counter-show-posts'>Comments: <%=@post.comments_counter%> Likes: <%=@post.likes_counter%></span>
+      <p><%=@post.text%></p>
+    </div>
+  </div>
+  <div class='container-recent-coment-show-posts'>
+      <%@post.comments.each do |comment|%>
+      <p><%=comment.author.name%>: <%=comment.text%></p>
+    <%end%>
+  </div>
+  <div class='button-see-all-posts'>
+    <%=link_to new_comment_path do%>
+    <button>Create New Comment</button>
+  <%end%>
+  </div>
+  <div class='form-create-like'>
+    <%= form_with url: user_post_likes_path(@post,@user), model: @like , method: :post ,scope: :like do |f| %>
+      <%= f.submit "Create Like" %>
+    <% end %>
+  </div>
+</section>
