--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,5 +10,5 @@
   <%= form.label :text %>
   <%= form.text_area :text %>
 </div>
-  <%= form.submit "Create Post" %>
-<% end %>
+  <%= form.submit "Create Post"
+<% end %> %>
