--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,17 @@
-<section>
+<h1>Here is a list of posts for a given Users</h1>
+<h2> List of name's</h2>
+<section class='section-main'>
   <% @users.each do |user| %>
-    <%= link_to user_path(user) do %>
-      <li class="user-container">
-        <div class="user-image">
-        	<%= image_tag user.photo, alt: "#{user.name}-avatar" %>
+    <%= link_to user_path(user) do%>
+    <div class='general-container'>
+        <div class='container-users-photo'>
+          <img src="<%= user.photo%>"/>
         </div>
-        <div class="user-info">
-          <h3 class="username"><%= user.name %></h3>
-          <span class="post-numb">Number of posts: <%= user.posts_counter %></span>
+        <div class='container-users'>
+          <h2 class='user-name'> <%= user.name %></h2>
+          <span class='number-post'>Number of posts: <%=user.posts.count%></span>
         </div>
-      </li>
-    <% end %>
+    </div>
+    <%end%>
   <% end %>
 </section>
