--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Here is a list of posts for a given Users</h1>
+<%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false }  %>
 <h2> List of name's</h2>
 <section class='section-main'>
   <% @users.each do |user| %>
