--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class='cont-id-text-counter-shows-users'>
-    <%@user.latest_posts.each do |post|%>
+    <%# <%@user.latest_posts.each do |post|%> %>
       <div class='container-id-text-counter'>
         <h4> Post # <%= post.id %> </h4>
         <h4> Text: <%= post.text %> </h4>
